--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "AlmaLinux 9 Python3 Devcontainer Image",
-  "image": "alma9-py3-devcontainer:dla1",
+  "image": "ghcr.io/daversomethingsomething/alma9-py3-devcontainer:main",
   "mounts": ["source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"],
 //  "remoteUser": "luser",
   "customizations": {
@@ -9,7 +9,8 @@
         "ms-python.python",
         "ms-azuretools.vscode-docker",
         "ms-python.vscode-pylance",
-        "DavidAnson.vscode-markdownlint"
+        "DavidAnson.vscode-markdownlint",
+        "github.vscode-github-actions"
       ]
     }
   }
